--- a/exam.html
+++ b/exam.html
@@ -7,6 +7,7 @@
     <style>
     body{
     background-color: antiquewhite;
+    display: flex;
     }
 
      .box{
@@ -14,7 +15,7 @@
         height: 400px;
         border-radius: 10px;
         background-color: navy;
-        
+         
      }
 
 
