--- a/exam.html
+++ b/exam.html
@@ -8,6 +8,8 @@
     body{
     background-color: antiquewhite;
     display: flex;
+    justify-content: center;
+    align-items: center;
     }
 
      .box{
